fix hover colour on mobile

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -21,7 +21,7 @@
     background-color: transparent;
     border: 0;
 
-    &:hover {
+    @include hover-supported() {
       color: $white;
       background-color: $gray;
     }
